--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
 
 <body>
     <header>
-        <div id="delivery-top-banner" class="row center waves-light cyan darken-2 white-text">
+        <div id="delivery-top-banner" class="row center waves-light cyan darken-2 white-text mb-0">
             <h4 class="col s12 header">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>                      
         </div>
         <!-- Navbar -->
