--- a/static/css/base.css
+++ b/static/css/base.css
@@ -33,12 +33,28 @@ p {
     font-size: 1.1rem;
 }
 
+.mt-20 {
+    margin-top: 25px;
+}
 
-/* ---------- Navbar ------------ */
+.mt-50 {
+    margin-top: 50px;
+}
 
-#delivery-top-banner {
+.mb-0 {
     margin-bottom: 0px;
 }
+
+.mr-20 {
+    margin-right: 20px;
+}
+
+.no-cursor {
+    cursor: auto;
+}
+
+
+/* ---------- Navbar ------------ */
 
 #navbar-background {
         background: url('/media/nav_background.jpeg') no-repeat right fixed;
@@ -337,9 +353,22 @@ header nav {
 .grind-option-selector {
     margin-top: 40px;
 }
+
 .option-label {
     font-size: 1.2rem !important;
     color: black !important;
+}
+
+.fixed-action-btn-title {
+    margin-right: 10px;
+}
+
+.img-icon {
+    width: 25px;
+    max-height: 30px;
+    max-width: 80%;
+    margin: 8px;
+    filter: invert(1);
 }
 /* ---------- Footer ------------ */
 
