--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,6 +3,7 @@
  
 html {
     height: 100%;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -331,6 +332,7 @@ header nav {
 
 .product-detail-table td, .product-detail-table th {
     font-size: 1rem;
+    width: 50%;
 }
 
 .expandable-image-product {
