changed styles of product detail

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -335,6 +335,11 @@ header nav {
     width: 50%;
 }
 
+.detail-subtotal-label {
+    margin-left: 25%;
+    margin-right: 30%;
+}
+
 .expandable-image-product {
     max-height: none !important;
 }
