--- a/products/templates/products/includes/product_detail_script.html
+++ b/products/templates/products/includes/product_detail_script.html
@@ -1,11 +1,11 @@
 <script type="text/javascript">
     // Disable +/- buttons outside 1-50 range
     function handleEnableDisable(itemId) {
-        var currentValue = parseInt($(`#id_qty_${itemId}`).val());
+        var currentValue = parseInt($(`.id_qty_${itemId}`).val());
         var minusDisabled = currentValue < 2;
         var plusDisabled = currentValue > 49;
-        $(`#decrement-qty_${itemId}`).prop('disabled', minusDisabled);
-        $(`#increment-qty_${itemId}`).prop('disabled', plusDisabled);
+        $(`.decrement-qty_${itemId}`).prop('disabled', minusDisabled);
+        $(`.increment-qty_${itemId}`).prop('disabled', plusDisabled);
     }
 
     // Ensure proper enabling/disabling of all inputs on page load
@@ -41,6 +41,12 @@
        handleEnableDisable(itemId);
     });
 
+    // Add To art Floating Button: scroll to Add To Cart section
+    $('#add-to-cart-floating-btn').click(function(e) {
+        window.scrollTo(0,1000);
+        $('.add-to-cart-btn').addClass('pulse');
+    });
+
     // Enable Read More Link in Product description
     $('#read-more-description-link').on('click', function(){
         $('#truncated-product-description').toggleClass('hide')
@@ -51,13 +57,4 @@
             $(this).text("Read More");
         };
     });
-
-    // Toggle class for main product image when image is clicked
-    $('#main-image-product').on('click', function(){
-            $('#main-image-product').toggleClass('expandable-image-product');
-        });
-        $('#materialbox-overlay').on('click', function(){
-            $('#main-image-product').removeClass('expandable-image-product');
-            console.log('it was clicked')
-        });
 </script>
