--- a/products/templates/products/includes/add_to_cart_form.html
+++ b/products/templates/products/includes/add_to_cart_form.html
@@ -32,13 +32,15 @@
                         </div>
                     </div>
                 </div>
-                <div class="col s12 mt-20">
+                <div class="col s12">
                     <div class="row">
                         <div class="col s6 right-align">
-                            <span class="option-label">Subtotal</span>
+                            <span class="option-label">Item Price:</span>
+                            <span class="option-label">Subtotal:</span>
                         </div>
                         <div class="col s6 left-align">
-                            <span class="detail-subtotal-label cyan-text text-darken-3">$ <span class="subtotal-price-label">{{ product.retail_price }}</span></span>
+                            <span class="detail-subtotal-label cyan-text text-darken-3">$ <span class="item-price-label">{{ product.retail_price }}</span></span>
+                            <span class="detail-subtotal-label cyan-text text-darken-3">$ <span class="item-subtotal-label">{{ product.retail_price }}</span></span>
                         </div>
                     </div>
                     <div class="center-align col s12">
